--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "lib": [
-      "DOM",
-      "ES2022"
-    ],
-    "rootDir": "src",
-    "module": "ES2022",
-    "moduleResolution": "node",
-    "strict": true,
-    "declaration": true,
+    "target": "ES2020",
+    "module": "ESNext",
+    "lib": ["ES2020"],
     "outDir": "dist",
-    "sourceMap": true,
-    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "noImplicitAny": false,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "moduleResolution": "node",
+    "declaration": true,
+    "sourceMap": true,
+    "resolveJsonModule": true
   },
-  "include": [
-    "eslint.config.js",
-    "homebridge-ui",
-    "src"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
