--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint": "^8.32.0",
     "@typescript-eslint/parser": "^5.58.0",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@types/node": "^18.0.0" 
   }
 }
