--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "typescript": "^4.9.5",
     "@types/node": "^18.0.0" 
-  }
+  },
+  "logo": "./powerlockicon.png"
 }
