--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "url": "git+https://github.com/fxPPC/homebridge-power-lock.git"
   },
   "license": "Apache-2.0",
-  "type": "module",
   "engines": {
     "node": ">=18.0.0",
     "homebridge": "^1.8.0 || ^2.0.0-beta.0"
@@ -28,6 +27,7 @@
   "types": "dist/index.d.ts",
   "files": [
     "dist",
+    "assets",
     "README.md",
     "LICENSE"
   ],
@@ -50,5 +50,5 @@
     "typescript": "^4.9.5",
     "@types/node": "^18.0.0" 
   },
-  "logo": "./powerlockicon.png"
+  "logo": "./assets/powerlockicon.png"
 }
