--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
-"compilerOptions": {
-    "module": "commonjs",
-    "target": "ES2019",
-    "lib": ["ES2019"],
-    "outDir": "dist",
-    "strict": true,
-    "noImplicitAny": false,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "declaration": true,
-    "sourceMap": true,
-    "resolveJsonModule": true
+  "compilerOptions": {
+    "target": "ES2019",      
+    "module": "commonjs",  
+    "lib": ["ES2019"],  
+    "outDir": "dist",          
+    "strict": true,               
+    "noImplicitAny": false,      
+    "esModuleInterop": true,     
+    "allowSyntheticDefaultImports": true,  
+    "moduleResolution": "node",          
+    "declaration": true,                 
+    "sourceMap": true,                  
+    "resolveJsonModule": true,           
+    "types": ["node"],        
+    "skipLibCheck": true          
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "include": ["src/**/*"],          
+  "exclude": ["node_modules", "**/*.spec.ts"] 
 }
