--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homebridge-power-lock",
   "version": "0.4.2",
-  "description": "Homebridge plugin to create a virtual lock with MQTT, Linux command line, or dummy modes.",
+  "description": "A modern Homebridge plugin to create virtual lock devices with support for MQTT, Linux command line, or dummy modes.",
   "keywords": [
     "homebridge-plugin",
     "homebridge",
@@ -10,13 +10,13 @@
     "command-line",
     "virtual-lock"
   ],
-  "homepage": "https://github.com/yourusername/homebridge-power-lock",
+  "homepage": "https://github.com/fxPPC/homebridge-power-lock",
   "bugs": {
-    "url": "https://github.com/yourusername/homebridge-power-lock/issues"
+    "url": "https://github.com/fxPPC/homebridge-power-lock/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yourusername/homebridge-power-lock.git"
+    "url": "git+https://github.com/fxPPC/homebridge-power-lock.git"
   },
   "license": "Apache-2.0",
   "engines": {
@@ -48,7 +48,7 @@
     "@typescript-eslint/parser": "^5.58.0",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "typescript": "^4.9.5",
-    "@types/node": "^18.0.0" 
+    "@types/node": "^18.0.0"
   },
-  "logo": "./assets/icon.png"  // <-- Added logo field
+  "logo": "./assets/powerlockicon.png"
 }
